--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,4 +16,8 @@ ftl_grading_host_home: /opt/ftl-repo-clone
 
 virtual_env_home: /opt/virtualenvs
 virtual_env_name: venv-grading
+
+# Local fact data, expect to pass in via deployer script etc.
+
+opentlc_student: john-doe
 ...
