Changed opentlc_name to student_name for clarity

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -19,5 +19,5 @@ virtual_env_name: venv-grading
 
 # Local fact data, expect to pass in via deployer script etc.
 
-opentlc_student: john-doe
+student_login: john-doe
 ...
