--- a/files/requirements.txt
+++ b/files/requirements.txt
@@ -1,4 +1,34 @@
-ansible
-boto3
-pywinrm
-
+adal==1.2.1
+ansible==2.7.10
+asn1crypto==0.24.0
+bcrypt==3.1.6
+cachetools==2.0.1
+certifi==2019.3.9
+cffi==1.12.3
+cryptography==2.6.1
+dictdiffer==0.8.0
+google-auth==1.6.3
+Jinja2==2.10.1
+k8s==0.11.0
+kubernetes==8.0.1
+MarkupSafe==1.1.1
+oauthlib==3.0.1
+openshift==0.8.8
+paramiko==2.4.2
+pyasn1==0.4.5
+pyasn1-modules==0.2.5
+pycparser==2.19
+PyJWT==1.7.1
+PyNaCl==1.3.0
+pyRFC3339==1.0
+python-dateutil==2.8.0
+python-string-utils==0.6.0
+pytz==2019.1
+PyYAML==5.1
+requests==2.13.0
+requests-oauthlib==1.2.0
+rsa==4.0
+ruamel.yaml==0.15.95
+six==1.10.0
+urllib3==1.24.3
+websocket-client==0.56.0
