--- a/tasks/create-virtualenv.yml
+++ b/tasks/create-virtualenv.yml
@@ -18,5 +18,5 @@
   pip:
     requirements: /tmp/requirements.txt
     virtualenv: "{{ virtual_env_home }}/{{ virtual_env_name }}"
-    virtualenv_site_packages: true
+    virtualenv_site_packages: no
 ...
