--- a/files/requirements.txt
+++ b/files/requirements.txt
@@ -29,6 +29,7 @@ requests==2.13.0
 requests-oauthlib==1.2.0
 rsa==4.0
 ruamel.yaml==0.15.95
+selinux
 six==1.10.0
 urllib3==1.24.3
 websocket-client==0.56.0
