--- a/files/requirements.txt
+++ b/files/requirements.txt
@@ -9,6 +9,7 @@ cryptography==2.6.1
 dictdiffer==0.8.0
 google-auth==1.6.3
 Jinja2==2.10.1
+jmespath==0.9.4
 k8s==0.11.0
 kubernetes==8.0.1
 MarkupSafe==1.1.1
