Upgrades to grader script and installation

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,13 +1,27 @@
 ---
 install_dependencies: True
 
+yum_repos:
+  - name: ansible-tower-cli-el7
+    baseurl: https://releases.ansible.com/ansible-tower/cli/ansible-tower-cli-el7
+    description: Ansible Tower CLI
+    enabled: yes
+    state: present
+
 yum_dependencies:
-    - git
-    - python-pip
+  - ansible-tower-cli
+  - autoconf
+  - automake 
+  - git
+  - libtool 
+  - python
+  - python-devel  
+  - python-pip
+
 
 pip_dependencies:
-    - virtualenv
-    - ansible-tower-cli
+  - virtualenv
+  - ansible-tower-cli
 
 # Git repo for FTL repo
 
