--- a/tasks/create-virtualenv.yml
+++ b/tasks/create-virtualenv.yml
@@ -1,45 +1,38 @@
 ---
-#- name: Setup yum repos
-#  yum_repository:
-#    name:         "{{ repo.name }}"
-#    description:  "{{ repo.description }}"
-#    baseurl:      "{{ repo.baseurl }}"
-#    enabled:      "{{ repo.enabled | default(true) }}"
-#    state:        "{{ repo.state | default('present') }}"
-#  loop: "{{ yum_repos }}"
-#  loop_control:
-#    loop_var: repo
+- name: Configure for virtualenv
+  block:
+    - name: Setup pre-requisite yum-utils esp for centos
+      when: install_dependencies | bool
+      package:
+        name: yum-utils
 
-- name: Setup pre-requisite yum-utils esp for centos
-  when: install_dependencies | bool
-  package:
-    name: yum-utils
+    - name: Setup awx cli repo bug in task above
+      shell: >
+        yum-config-manager 
+        --add-repo https://releases.ansible.com/ansible-tower/cli/ansible-tower-cli-el7.repo
 
-- name: Setup awx cli repo bug in task above
-  shell: >
-    yum-config-manager 
-    --add-repo https://releases.ansible.com/ansible-tower/cli/ansible-tower-cli-el7.repo
+    - name: Setup pre-requisite python packages
+      when: install_dependencies | bool
+      package:
+        name: "{{ yum_dependencies }}"
+        state: present
 
-- name: Setup pre-requisite python packages
-  when: install_dependencies | bool
-  package:
-    name: "{{ yum_dependencies }}"
-    state: present
+    - name: Setup pre-requisite pip packages
+      when: install_dependencies | bool
+      pip:
+        name: "{{ pip_dependencies }}"
+        state: present
 
-- name: Setup pre-requisite pip packages
-  when: install_dependencies | bool
-  pip:
-    name: "{{ pip_dependencies }}"
-    state: present
+    - name: Copy requirements.txt to target for FTL virtualenv
+      copy:
+        src: requirements.txt
+        dest: /tmp/requirements.txt
 
-- name: Copy requirements.txt to target for FTL virtualenv
-  copy:
-    src: requirements.txt
-    dest: /tmp/requirements.txt
-
-- name: "Create virtualenv {{ virtual_env_name }} for FTL"
-  pip:
-    requirements: /tmp/requirements.txt
-    virtualenv: "{{ virtual_env_home }}/{{ virtual_env_name }}"
-    virtualenv_site_packages: no
+    - name: "Create virtualenv {{ virtual_env_name }} for FTL"
+      pip:
+        requirements: /tmp/requirements.txt
+        virtualenv: "{{ virtual_env_home }}/{{ virtual_env_name }}"
+        virtualenv_site_packages: no
+  tags:
+    - virtualenv
 ...
