--- a/tasks/create-virtualenv.yml
+++ b/tasks/create-virtualenv.yml
@@ -1,18 +1,19 @@
 ---
 - name: Setup pre-requisite python packages
-  when: install_dependencies | bool
-  block:
-    - name: For python2
-      package:
-        name: "{{ yum_dependencies }}"
-        state: present
-      when: not use_python3
+  when: 
+    - install_dependencies | bool
+    - not use_python3 | bool
+  package:
+    name: "{{ yum_dependencies }}"
+    state: present
 
-    - name: For python3
-      package:
-        name: "{{ yum_dependencies_python3 }}"
-        state: present
-      when: use_python3
+- name: Setup pre-requisite python packages
+  when: 
+    - install_dependencies | bool
+    - use_python3 | bool
+  package:
+    name: "{{ yum_dependencies_python3 }}"
+    state: present
 
 - name: Setup pre-requisite pip packages
   when: install_dependencies | bool
