--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -26,4 +26,6 @@ virtual_env_name: venv-grading
 # Local fact data, expect to pass in via deployer script etc.
 
 student_login: john-doe
+
+use_python3: false
 ...
