Add remaining splits for python3

--- a/tasks/create-virtualenv.yml
+++ b/tasks/create-virtualenv.yml
@@ -1,5 +1,5 @@
 ---
-- name: Setup pre-requisite python packages
+- name: Setup pre-requisite python2 packages
   when: 
     - install_dependencies | bool
     - not use_python3 | bool
@@ -7,7 +7,7 @@
     name: "{{ yum_dependencies }}"
     state: present
 
-- name: Setup pre-requisite python packages
+- name: Setup pre-requisite python3 packages
   when: 
     - install_dependencies | bool
     - use_python3 | bool
@@ -16,10 +16,21 @@
     state: present
 
 - name: Setup pre-requisite pip packages
-  when: install_dependencies | bool
+  when: 
+    - install_dependencies | bool
+    - not use_python3 | bool
   pip:
     name: "{{ pip_dependencies }}"
     state: present
+
+- name: Setup pre-requisite pip3 packages
+  when: 
+    - install_dependencies | bool
+    - use_python3 | bool
+  pip:
+    name: "{{ pip_dependencies }}"
+    state: present
+    executable: /usr/bin/pip3
 
 - name: Copy requirements.txt to target for FTL virtualenv
   copy:
@@ -27,8 +38,21 @@
     dest: /tmp/requirements.txt
 
 - name: "Create virtualenv {{ virtual_env_name }} for FTL"
+  when: 
+    - install_dependencies | bool
+    - not use_python3 | bool
   pip:
     requirements: /tmp/requirements.txt
     virtualenv: "{{ virtual_env_home }}/{{ virtual_env_name }}"
     virtualenv_site_packages: no
+
+- name: "Create virtualenv {{ virtual_env_name }} for FTL"
+  when:
+    - install_dependencies | bool
+    - use_python3 | bool
+  pip:
+    requirements: /tmp/requirements.txt
+    virtualenv: "{{ virtual_env_home }}/{{ virtual_env_name }}"
+    virtualenv_site_packages: no
+    virtualenv_command: /usr/local/bin/virtualenv
 ...
