--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,13 +1,17 @@
 ---
-# Create the FTL virtualenv on grader host
-- import_tasks: create-virtualenv.yml
-
-# Insert the FTL git repo on grader host
-- import_tasks: insert-ftl-repo.yml
-
-# Create local facts from student and course metadata
-- import_tasks: create-local-facts.yml
-
-# Insert the wrapper scripts called by students
-- import_tasks: insert-wrapper-scripts.yml
+# GC swarm, disable FTL from here since the condition in agnosticd
+# is too loose and a lot of catalog items are impacted.
+- when: install_ftl | default(true) | bool
+  block:
+  # Create the FTL virtualenv on grader host
+  - include_tasks: create-virtualenv.yml
+  
+  # Insert the FTL git repo on grader host
+  - include_tasks: insert-ftl-repo.yml
+  
+  # Create local facts from student and course metadata
+  - include_tasks: create-local-facts.yml
+  
+  # Insert the wrapper scripts called by students
+  - include_tasks: insert-wrapper-scripts.yml
 ...
