--- a/files/requirements_python3.txt
+++ b/files/requirements_python3.txt
@@ -1,6 +1,9 @@
 adal==1.2.5
 ansible==2.9.15
 bcrypt==3.2.0
+boto==2.49.0
+boto3==1.17.32
+botocore==1.20.32
 cachetools==4.1.1
 certifi==2020.11.8
 cffi==1.14.4
@@ -31,6 +34,7 @@ requests-oauthlib==1.3.0
 rsa==4.5
 ruamel.yaml==0.16.12
 ruamel.yaml.clib==0.2.2
+s3transfer==0.3.6
 selinux==0.2.1
 six==1.15.0
 urllib3==1.26.2
