--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -31,6 +31,8 @@ pip_dependencies:
 
 ftl_git_repo: https://github.com/redhat-gpte-devopsautomation/FTL.git
 
+ftl_git_branch: ftl-virt-on-rosa
+
 # Local destination directory on grading host
 
 ftl_grading_host_home: /opt/ftl-repo-clone
